Fix tooltips overflow
Fixes #205

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -6,3 +6,9 @@
     text-transform: uppercase;
   }
 }
+
+.u-overflow {
+  &--visible {
+    overflow: visible;
+  }
+}
